# mofa-studio

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOY_WITH_NIX.md  PACKAGING.md  README.md  flake.nix  pixi.toml  plugin-development.md  plugin-development.zh.md  resign_and_package.sh
.cargo/: .global-cache
.cargo/git/db/makepad-721ba110953b28bc/: FETCH_HEAD
.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: arrow-54.3.1.crate  arrow-arith-54.3.1.crate  arrow-array-54.3.1.crate  arrow-cast-54.3.1.crate  arrow-csv-54.3.1.crate  arrow-ipc-54.3.1.crate  arrow-json-54.3.1.crate  arrow-ord-54.3.1.crate  arrow-row-54.3.1.crate  arrow-select-54.3.1.crate  arrow-string-54.3.1.crate  dora-arrow-convert-0.4.1.crate  dora-core-0.4.1.crate  dora-message-0.7.0.crate  dora-metrics-0.4.1.crate  dora-node-api-0.4.1.crate  dora-tracing-0.4.1.crate  futures-concurrency-7.7.1.crate  opentelemetry-system-metrics-0.31.0.crate  raw_sync_2-0.1.5.crate  rfd-0.14.1.crate  rodio-0.19.0.crate  schemars_derive-1.2.0.crate  serde-with-expand-env-1.1.0.crate  shared-memory-server-0.4.1.crate  shared_memory_extended-0.13.0.crate  splitty-1.0.2.crate  sysinfo-0.32.1.crate  sysinfo-0.35.2.crate  uhlc-0.5.2.crate  wry-0.50.5.crate  zerocopy-derive-0.8.36.crate
apps/mofa-alzheimer-web/: Cargo.toml
apps/mofa-alzheimer-web/src/: lib.rs
apps/mofa-alzheimer-web/src/screen/: mod.rs
apps/mofa-converter/: Cargo.toml
apps/mofa-converter/python/: requirements.txt
apps/mofa-converter/python/web/: app.py
apps/mofa-converter/src/: lib.rs
apps/mofa-converter/src/screen/: mod.rs
apps/mofa-debate/dataflow/: voice-chat.packaged.yml
apps/mofa-debate/src/: lib.rs
apps/mofa-debate/src/screen/: audio_controls.rs  chat_panel.rs  design.rs  dora_handlers.rs  log_panel.rs  mod.rs
apps/mofa-fm/: Cargo.toml
apps/mofa-fm-web/: Cargo.toml
apps/mofa-fm-web/python/web/: app.py
apps/mofa-fm-web/src/: lib.rs
apps/mofa-fm-web/src/screen/: mod.rs
apps/mofa-fm/dataflow/: study_config_tutor.toml  voice-chat.packaged.yml  voice-chat.yml
apps/mofa-fm/src/: lib.rs  mofa_hero.rs  screen.rs
apps/mofa-hello-world/: Cargo.toml
apps/mofa-hello-world-rust/: Cargo.toml
apps/mofa-hello-world-rust/src/: lib.rs
apps/mofa-hello-world-rust/static/: index.html
apps/mofa-hello-world/python/: app.py
apps/mofa-hello-world/src/: lib.rs
apps/mofa-note-taker/: Cargo.toml
apps/mofa-note-taker/python/: app.py
apps/mofa-note-taker/src/: lib.rs
apps/mofa-personal-news/: Cargo.toml
apps/mofa-personal-news/src/: lib.rs
apps/mofa-podcast/: Cargo.toml
apps/mofa-podcast-factory/: Cargo.toml
apps/mofa-podcast-factory/src/: lib.rs
apps/mofa-podcast/src/: lib.rs
apps/mofa-podcast/src/models/: errors.rs  mod.rs  script.rs  voice.rs
apps/mofa-podcast/src/screen/: mod.rs
apps/mofa-podcast/src/services/: generator.rs  mod.rs  parser.rs  tts.rs
apps/mofa-settings/src/: lib.rs  models_view.rs  providers_panel.rs  screen.rs
apps/mofa-transcriber/: Cargo.toml
apps/mofa-transcriber/python/: constraints.txt  requirements.txt
apps/mofa-transcriber/src/: lib.rs
apps/mofa-webview-demo/: Cargo.toml
apps/mofa-webview-demo/src/: lib.rs
apps/mofa-webview-placeholder/: Cargo.toml
apps/mofa-webview-placeholder/src/: lib.rs
mofa-dora-bridge/src/: controller.rs  dispatcher.rs
mofa-studio-shell/: Cargo.toml
mofa-studio-shell/src/: app.rs  main.rs
mofa-studio-shell/src/widgets/: dashboard.rs  sidebar.rs
mofa-widgets/: Cargo.toml
mofa-widgets/src/: app_trait.rs  lib.rs  participant_panel.rs
mofa-widgets/src/plugins/: loader.rs  manifest.rs  mod.rs  screen.rs
mofa-widgets/src/webview/: ipc.rs  mod.rs  platform_handle.rs  wry_wrapper.rs
scripts/: build-release.sh  create-installer-dmg.sh  create-simple-dmg.sh  package-macos-full.sh  package-macos.sh  python-starter.sh  sign-and-notarize.sh  sign-notarize-dmg.sh
skills/02-mofa-studio-app-development/: SKILL.md
skills/02-mofa-studio-app-development/references/: webview-app-cheatsheet.md  webview-app-creation.md
(+151 files in other folders)
