[package]
name = "mofa-studio-shell"
version.workspace = true
edition.workspace = true

[features]
default = ["mofa-fm", "mofa-settings", "mofa-debate", "mofa-webview-demo", "mofa-personal-news", "mofa-transcriber", "mofa-podcast", "mofa-podcast-factory", "mofa-note-taker", "mofa-hello-world"]
mofa-fm = ["dep:mofa-fm"]
mofa-settings = ["dep:mofa-settings"]
mofa-debate = ["dep:mofa-debate"]
mofa-webview-demo = ["dep:mofa-webview-demo"]
mofa-personal-news = ["dep:mofa-personal-news"]
mofa-transcriber = ["dep:mofa-transcriber"]
mofa-podcast = ["dep:mofa-podcast"]
mofa-podcast-factory = ["dep:mofa-podcast-factory"]
mofa-note-taker = ["dep:mofa-note-taker"]
mofa-hello-world = ["dep:mofa-hello-world"]

[dependencies]
makepad-widgets.workspace = true
mofa-widgets = { path = "../mofa-widgets" }
mofa-ui = { path = "../mofa-ui" }
mofa-dora-bridge = { path = "../mofa-dora-bridge" }
mofa-fm = { path = "../apps/mofa-fm", optional = true }
mofa-settings = { path = "../apps/mofa-settings", optional = true }
mofa-debate = { path = "../apps/mofa-debate", optional = true }
mofa-webview-demo = { path = "../apps/mofa-webview-demo", optional = true }
mofa-personal-news = { path = "../apps/mofa-personal-news", optional = true }
mofa-transcriber = { path = "../apps/mofa-transcriber", optional = true }
mofa-podcast = { path = "../apps/mofa-podcast", optional = true }
mofa-podcast-factory = { path = "../apps/mofa-podcast-factory", optional = true }
mofa-note-taker = { path = "../apps/mofa-note-taker", optional = true }
mofa-hello-world = { path = "../apps/mofa-hello-world", optional = true }

# Audio
cpal.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
sysinfo = "0.32"
ctrlc = "3.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "mofa-studio"
path = "src/main.rs"
