[package]
name = "mofa-widgets"
version.workspace = true
edition.workspace = true

[dependencies]
makepad-widgets.workspace = true
cpal.workspace = true
parking_lot.workspace = true
log.workspace = true
crossbeam-channel = "0.5"

# WebView support
wry = "0.50"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSView", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSThread", "NSArray"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
